update title in index html

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>A Practical Guide to KGC From Text (AJCAI 2022)</title>
+    <title>
+      Technical Language Processing and Knowledge Graphs Demystified (WMC 2023)
+    </title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
   </head>
   <body>
